--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ grid-template-rows: 1fr 7fr 1.5fr;border-left: 2px solid #202020;}
 
 
 
-.mass{background-image: url(/img/BG.png);
+.mass{background-image: url(/Whats-App/img/BG.png);
 background-size: cover;}
 
 
@@ -111,30 +111,30 @@ margin: 0px 10px 0px 10px;
 
 
 
-.ME{background-image: url(/img/mero.jpg);
+.ME{background-image: url(/Whats-App//img/mero.jpg);
     background-size: cover;}
 
 
 
 
-.together{background-image: url(/img/together.jpg);
+.together{background-image: url(/Whats-App//img/together.jpg);
 background-size: cover;}
 
-.Zyad{background-image: url(/img/zyad.jpg);
+.Zyad{background-image: url(/Whats-App//img/zyad.jpg);
     background-size: cover;}
 
-    .deaa{background-image: url(/img/deaa.jpg);
+    .deaa{background-image: url(/Whats-App//img/deaa.jpg);
         background-size: cover;}
 
-        .abdo{background-image: url(/img/abdo.jpg);
+        .abdo{background-image: url(/Whats-App//img/abdo.jpg);
             background-size: cover;}
 
-            .shref{background-image: url(/img/shref.jpg);
+            .shref{background-image: url(/Whats-App//img/shref.jpg);
                 background-size: cover;}
 
-                .Ahmed{background-image: url(/img/ahmed.jpg);
+                .Ahmed{background-image: url(/Whats-App//img/ahmed.jpg);
                     background-size: cover;}
 
 
-                        .yahya{background-image: url(/img/yahya.jpg);
+                        .yahya{background-image: url(/Whats-App//img/yahya.jpg);
                             background-size: cover;}
